# rescript_evaluate

./: LICENSE  Makefile  README.md  pyproject.toml
conda-recipe/: meta.yaml
rescript_eval/: __init__.py  cross_validate.py  plugin_setup.py
rescript_eval/tests/: test_cross_validate.py
rescript_evaluate/: __init__.py  citations.bib  cross_validate.py  plugin_setup.py
rescript_evaluate/tests/: test_cross_validate.py
