[project]
name = "rescript_eval"
authors = [
    { name = "Nicholas Bokulich", email = "nbokulich@gmail.com" }
]
description = "Reference sequence annotation and curation"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/mikerobeson/rescript_evaluate"
Repository = "https://github.com/mikerobeson/rescript_evaluate"

[project.entry-points.'qiime2.plugins']
"rescript_eval" = "rescript_eval.plugin_setup:plugin"

[build-system]
requires = [
    "setuptools",
    "versioningit",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.versioningit.vcs]
method = "git-archive"
describe-subst = "2026.7.0"
default-tag = "0.0.1"

[tool.versioningit.next-version]
method = "minor"

[tool.versioningit.format]
distance = "{base_version}+{distance}.{vcs}{rev}"
dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"
distance-dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"

[tool.versioningit.write]
file = "rescript_eval/_version.py"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["rescript_eval*"]

[tool.setuptools.package-data]
rescript_eval = ["**/*"]
